added online game section

--- a/index.html
+++ b/index.html
@@ -48,9 +48,69 @@
     </div>
 </section>
 <!-- gamer section -->
-<section class="gamer">
-    
+<section class="gamer-container">
+    <div class="gamer common-margin">
+    <div class="gamer-left">
+        <img src="./images/pngwing 4.png" alt="" class="gamer-image">
+    </div>
+    <div class="gamer-right">
+        <h1>We Are Gamer</h1>
+        <p>An international digital games and entertainment company. 
+            We develop, publish and distribute multiplayer mobile games. 
+            We reach over 400 million players each month and our audience keeps growing.</p>
+        <button class="btn-primary">KNOW MORE</button>
+        <h4>Our purpose...</h4>
+        <h3>“unleash the gamer in everyone”</h3>
+    </div>
+</div>
 </section>
+<!-- online game section -->
+<section class="online-game-container common-margin">
+
+    <div class="online-game-title">
+        <h1>Online Games <div class="funny">Funny Videos</div></h1>
+        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+    </div>
+
+    <div class="online-game-box">
+
+        <div class="game-box">
+            <img src="./images/Rectangle 4.png" alt="">
+
+            <div class="hover">
+                <i class="fa-solid fa-circle-play"></i>
+                <h6>Watch Now</h6>
+            </div>
+
+            <p>No Download. No Installs. Play games.</p>
+        </div>
+        <div class="game-box">
+            <img src="./images/Rectangle 5.png" alt="">
+            <div class="hover">
+                <i class="fa-solid fa-circle-play"></i>
+                <h6>Watch Now</h6>
+            </div>
+            <p>Did you score? #unblockedgames #school</p>
+        </div>
+        <div class="game-box">
+            <img src="./images/Rectangle 6.png" alt="">
+            <div class="hover">
+                <i class="fa-solid fa-circle-play"></i>
+                <h6>Watch Now</h6>
+            </div>
+            <p>Breaking game records like OG</p>
+        </div>
+        <div class="game-box">
+            <img src="./images/Rectangle 7.png" alt="">
+            <div class="hover">
+                <i class="fa-solid fa-circle-play"></i>
+                <h6>Watch Now</h6>
+            </div>
+            <p>Busted gaming on school laptop, but you.</p>
+        </div>
+    </div>
+</section>
+
 
 
 
