--- a/index.html
+++ b/index.html
@@ -110,7 +110,91 @@
         </div>
     </div>
 </section>
+<!-- play section -->
+<section class="play-container common-margin">
+    <div class="play-left">
+        <h1 class="lal-play">Play instantly,</h1>
+        <h1>No Downloads <br> No Instals.</h1>
+        <p>Play games online for free without downloading. <br> Just click the Play button and play instantly in your browser.</p>
+    </div>
+    <div class="play-right">
+        <img src="./images/Rectangle 55.png" alt="" class="play-img-up">
+        <img src="./images/Rectangle 66.png" alt="" class="play-img-down">
+    </div>
+</section>
+<!-- career section -->
+<section class="career-container">
 
+<div class="career">
+    <div class="career-left">
+        <h1 class="career-head">Careers</h1>
+        <p class="career-discript">Gamer is driven to create the best and most 
+            fun games for our millions of players all around the world, and we,
+            re always on the lookout for more top talent to join our growing 
+            team. If you,d like to help us make great games and
+             be a part of Gamers bright future, we,d love to hear from you.</p>
+<div class="bam-dan">
+    <ul class="bam">
+        <li>Multimedia artist</li>
+        <li>Data engineear</li>
+        <li>Android engineear</li>
+        <li>Server developer</li>
+     </ul>
+     <ul class="dan">
+        <li>Lisbon,Portugal</li>
+        <li>UK,London</li>
+        <li>Lisbone,Portugal</li>
+        <li>USA,New York</li>
+     </ul>
+</div>
+             <button class="secondbtn">See All Positions</button>
+    </div>
+
+    <div class="career-right">
+        <img src="./images/Group 65.png" alt="" class="career-image">
+    </div>
+</div>
+</section>
+<!-- games section -->
+<section class="gam-container">
+
+    <div class="gam-box">
+        <img src="./images/Rectangle 11.png" alt="">
+        <h6>Action Games</h6>
+    </div>
+    <div class="gam-box">
+        <img src="./images/Rectangle 12.png" alt="">
+        <h6>Adventures games</h6>
+    </div>
+    <div class="gam-box">
+        <img src="./images/Rectangle 13.png" alt="">
+        <h6>arcade games</h6>
+    </div>
+    <div class="gam-box">
+        <img src="./images/Rectangle 14.png" alt="">
+        <h6>Educational games</h6>
+    </div>
+    <div class="gam-box">
+        <img src="./images/Rectangle 15.png" alt="">
+        <h6>Word games</h6>
+    </div>
+    <div class="gam-box">
+        <img src="./images/Rectangle 16.png" alt="">
+        <h6>Role playing games</h6>
+    </div>
+    <div class="gam-box">
+        <img src="./images/Rectangle 17.png" alt="">
+        <h6>Video games</h6>
+    </div>
+    <div class="gam-box">
+        <img src="./images/Rectangle 18.png" alt="">
+        <h6>Puzzle games</h6>
+    </div>
+    <div class="gam-box">
+        <img src="./images/Rectangle 19.png" alt="">
+        <h6>Strategy games</h6>
+    </div>
+</section>
 
 
 
