added footer section

--- a/index.html
+++ b/index.html
@@ -195,8 +195,61 @@
         <h6>Strategy games</h6>
     </div>
 </section>
-
-
-
+<!-- footer section added -->
+<section class="footer-container">
+    <div class="footer-head">
+        <div class="footer-image"><img src="./images/Frame.png" alt=""></div>
+        <div class="footer-title"><h1>Gamer</h1></div>
+    </div>
+<div class="footer-part-one">
+    <ul>
+    <li>
+        <h6>Our Story</h6>
+    </li>
+    <li>
+        <h6>Games</h6>
+    </li>
+    <li>
+        <h6>web Games</h6>
+    </li>
+    <li>
+        <h6>Careers</h6>
+    </li>
+    <li>
+        <h6>Support</h6>
+    </li>
+    <li>
+        <h6>My Account</h6>
+    </li>
+    </ul>
+</div>
+<div class="footer-part-tow">
+    <ul>
+        <li><i class="fa-brands fa-twitter"></i></li>
+        <li><i class="fa-brands fa-square-facebook"></i></li>
+        <li><i class="fa-brands fa-youtube"></i></li>
+        <li><i class="fa-brands fa-youtube"></i></li>
+        <li><i class="fa-brands fa-instagram"></i></li>
+        <li><i class="fa-brands fa-apple"></i></li>
+    </ul>
+</div>
+<div class="footer-end">
+    <ul>
+        <li>
+            <h5>Terms & Conditions</h5>
+        </li>
+        <li>
+            <h5>Privacy Policy</h5>
+        </li>
+        <li>
+            <h5>Cookie Policy</h5>
+        </li>
+        <li>
+            <h5>Settings</h5>
+        </li>
+    </ul>
+    <p class="footer-discript">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+</div>
+</section>
 </body>
 </html>
